--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Cantarell:wght@700&display=swap");
+
 html,
 body {
   padding: 0;
@@ -11,6 +13,61 @@ a {
   text-decoration: none;
 }
 
+.image {
+  position: relative;
+}
+.caption-center {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 1.7rem;
+  font-style: italic;
+  font-weight: bold;
+  color: rgb(255, 255, 255);
+}
+.shop-all-button {
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: rgb(255, 255, 255);
+  border: 1px solid black;
+  padding: 10px 50px;
+  font-size: 20px;
+  background-color: white;
+  color: black;
+}
+
+.shop-all-button:hover {
+  background-color: black;
+  color: white;
+  border-radius: 60px;
+}
+
+.nav-link-text {
+  font-size: 12px;
+  font-weight: 400;
+  font-weight: lighter;
+}
+
 * {
   box-sizing: border-box;
+}
+.nav-link {
+  padding: 0 5px;
+}
+
+.search {
+  position: absolute;
+  left: -12px;
+  top: 4px;
+}
+
+.header-shop {
+  font-family: "Cantarell", sans-serif;
+}
+.grid-shop-all {
+  font-size: 16px;
+  font-family: "Cantarell", sans-serif;
 }
